--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -38,7 +38,7 @@ a{
 }
 
 .section-navigation .container .middle p{
-    font-family: "Manrope-Bold", sans-serif;
+    font-family: "Manrope-SemiBold", sans-serif;
 }
 
 .section-navigation .container .icons{
