--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,7 +1,8 @@
 @import url(./fonts.css);
 
 body{
-    background: linear-gradient(to right, rgb(253, 253, 253), rgb(190, 189, 189));
+    background: linear-gradient(to right, rgb(253, 253, 253), rgb(216, 215, 215));
+    overflow-x: hidden;
 }
 
 *{
@@ -49,3 +50,144 @@ a{
     cursor: pointer;
 }
 
+/* SECTION TITLE */
+
+.section-title{
+    margin-top: 100px;
+}
+
+.section-title .container{
+    display: flex;
+}
+
+.section-title .container .text{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.section-title .container .text h2{
+    font-size: 55px;
+}
+
+.section-title .container .text p{
+    font-size: 21.3px;
+}
+
+.knopka{
+    margin-top: 50px;
+    border-radius: 10px;
+    border: 1px solid rgb(82, 151, 253);
+    width: 40%;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.knopka button{
+    font-family: "Manrope-SemiBold", sans-serif;
+    color: white;
+    font-size: 16px;
+    width: 98%;
+    height: 92%;
+    background-color: rgb(53, 134, 255);
+    background-size: contain;
+    border-radius: 10px;
+    transition: .3s;
+}
+
+.knopka button:hover{
+    background-color: white;
+    color: black;
+    transition: .3s;
+    cursor: pointer;
+}
+
+/* SECTION COURSES */
+
+.section-courses{
+    margin-top: 150px;
+}
+
+.section-courses .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section-courses .container h2{
+    font-size: 45px;
+    margin-bottom: 70px;
+}
+
+.section-courses .container .cards{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.section-courses .container .cards .card{
+    background-color: white;
+    width: 30%;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    transition: .3s;
+}
+
+.section-courses .container .cards .card:hover{
+    background-color: rgb(53, 134, 255);
+    transition: .3s;
+    cursor: pointer;
+    color: white;
+}
+
+.section-courses .container .cards .card p{
+    font-family: 'Manrope-SemiBold';
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.section-courses .container .knopka{
+    width: 20%;
+}
+
+/* SECTION PROBA */
+
+.section-proba{
+    margin-top: 150px;
+    margin-bottom: 100px;
+}
+
+.section-proba .container{
+    border-radius: 10px;
+    height: 492px;
+    background-image: url(../img/5.jpg);
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.section-proba .container .text{
+    width: 45%;
+    margin-left: 100px;
+}
+
+.section-proba .container .text h2{
+    font-size: 40px;
+    font-family: 'Manrope-SemiBold';
+}
+
+.section-proba .container .text p{
+    font-family: 'Manrope-Regular';
+    font-size: 18px;
+    margin-top: 10px;
+}
+
+.section-proba .container .text .knopka button{
+    font-size: 15px;
+}
