--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -272,3 +272,84 @@ a{
 .section-buy .container .text .sell h2{
     font-size: 50px;
 }
+
+/* SECTION INTERACTIV */
+
+.interactive{
+    margin: 80px 0 80px 0;
+}
+.interactive .buttons{
+    display: flex;
+}
+.interactive .buttons p{
+    font-family: 'Manrope-SemiBold';
+    font-size: 16px;
+    font-weight: 600;
+}
+#l2{
+    margin: 0 40px;
+}
+.interactive .infoblock{
+    display: flex;
+    margin-top: 42px;
+}
+.interactive .infoblock .text{
+    width: 28%;
+}
+.interactive .infoblock .text p{
+    font-family: 'Manrope-Regular';
+    font-size: 16px;
+    color: #3c4148;
+    font-weight: 600;
+}
+.interactive .cards{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 60px;
+    width: 100%;
+}
+.interactive .card{
+    padding: 15px 0;
+    background-color: #ffffff;
+    width: 30%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 12px;
+}
+.interactive .card img{
+    height: 80%;
+}
+.interactive .name{
+    text-align: center;
+}
+.interactive .name h4{
+    font-family: 'Manrope-SemiBold';
+    font-size: 16px;
+    color: #07172e;
+}
+.interactive .name p{
+    font-family: 'Manrope-Regular';
+    font-size: 12px;
+    font-weight: 600;
+    color: #3c4148;
+}
+
+#l1, #l2, #l3{
+    width: 160px;
+    height: 50px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+#r1:checked ~ #l1, #r2:checked ~ #l2, #r3:checked ~ #l3{
+    background-color: #3585fd;
+    color: white;
+    box-shadow: #c4cdda 3px 6px 15px 0;
+}
